BUGFIX:fixed the breadcrumbs being cut off at 400px wide.

--- a/admin/css/screen.css
+++ b/admin/css/screen.css
@@ -262,6 +262,7 @@ body.cms { overflow: hidden; }
 .cms-content-header .backlink { float: left; margin-top: 7px; }
 .cms-content-header .backlink span.btn-icon-back { height: 16px; }
 .cms-content-header h2 { float: left; padding: 8px 8px 0 8px; font-size: 14px; line-height: 24px; font-weight: bold; text-shadow: #bfcad2 1px 1px 0; max-width: 400px; margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; o-text-overflow: ellipsis; }
+.cms-content-header h2#page-title-heading { max-width: 100%; }
 .cms-content-header > div { width: 9999em; overflow: hidden; }
 .cms-content-header .cms-content-header-tabs { position: fixed; right: 40px; }
 .cms-content-header .cms-content-header-tabs .ui-tabs-nav li a { font-weight: bold; line-height: 16px; padding: 12px 20px 12px; }
